--- a/index.html
+++ b/index.html
@@ -18,17 +18,25 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-casual.min.css" rel="stylesheet">
+  <link href="css/business-casual.css" rel="stylesheet">
+  <script type="map.js"></script>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <link rel="stylesheet" href="mapstyle.css"> 
 
+    <script  src="map.js"></script>
+    <style type="text/css">
+      #chartdiv {
+  position: absolute !important; top: 450px; background: transparent;
+}
+    </style>
 </head>
-
+  <div id="chartdiv"></div>
 <body>
-
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Hack for Climate</span>
     <span class="site-heading-lower">Global Climate Action Tracking</span>
   </h1>
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
@@ -56,27 +64,40 @@
       </div>
     </div>
   </nav>
-
-  <section class="page-section clearfix">
+<section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
-        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+        <div class="intro-text text-center bg-faded p-5.5 rounded">
           <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">Fresh Coffee</span>
-            <span class="section-heading-lower">Worth Drinking</span>
+            <span class="section-heading-upper">Global Carbon Emission Heatmap</span>
           </h2>
-          <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
-          </p>
+          <p class="mb-5">Click on your country/city to view the carbon emission around you.
+          </p >
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+            <a class="btn btn-primary btn-xl" href=" ">Act now!</a >
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section cta">
+<section class="page-section clearfix">
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-9 mx-auto">
+  <div class="cta-inner text-center rounded">   
+    <script src="https://www.amcharts.com/lib/4/core.js"></script>
+    <script src="https://www.amcharts.com/lib/4/maps.js"></script>
+    <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
+    <script  src="map.js"></script>
+  </div>
+  </div>
+  </div>
+  </div>
+</section> 
+
+  
+<!--   <section class="page-section cta"> 
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
@@ -85,18 +106,18 @@
               <span class="section-heading-upper">Our Promise</span>
               <span class="section-heading-lower">To You</span>
             </h2>
-            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p >
           </div>
         </div>
       </div>
     </div>
   </section>
-
-  <footer class="footer text-faded text-center py-5">
+ -->
+<!--   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Copyright &copy; Your Website 2019</p >
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
