--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Hack for Climate</title>
+  <title>Hack4Climate</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
   <script type="map.js"></script>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <link rel="stylesheet" href="mapstyle.css"> 
+      <link rel="stylesheet" href="mapstyle.css">
 
     <script  src="map.js"></script>
     <style type="text/css">
@@ -33,9 +33,9 @@
 </head>
   <div id="chartdiv"></div>
 <body>
-  <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">Hack for Climate</span>
-    <span class="site-heading-lower">Global Climate Action Tracking</span>
+  <h1 class="site-heading text-center text-black d-none d-lg-block">
+    <span class="site-heading-upper text-primary mb-3">Hack4Climate</span>
+    <span class="site-heading-lower">Climate Action Tracking</span>
   </h1>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -52,14 +52,9 @@
             </a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">Orgs</a>
           </li>
-          <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="products.html">Products</a>
-          </li>
-          <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="store.html">Store</a>
-          </li>
+
         </ul>
       </div>
     </div>
@@ -74,7 +69,7 @@
           <p class="mb-5">Click on your country/city to view the carbon emission around you.
           </p >
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href=" ">Act now!</a >
+            <a class="btn btn-primary btn-xl" href="about.html">Act now!</a >
           </div>
         </div>
       </div>
@@ -85,7 +80,7 @@
   <div class="container">
   <div class="row">
   <div class="col-xl-9 mx-auto">
-  <div class="cta-inner text-center rounded">   
+  <div class="cta-inner text-center rounded">
     <script src="https://www.amcharts.com/lib/4/core.js"></script>
     <script src="https://www.amcharts.com/lib/4/maps.js"></script>
     <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
@@ -94,10 +89,10 @@
   </div>
   </div>
   </div>
-</section> 
+</section>
 
-  
-<!--   <section class="page-section cta"> 
+
+<!--   <section class="page-section cta">
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
