--- a/join.html
+++ b/join.html
@@ -60,8 +60,28 @@
               <h2 class="section-heading mb-4">
                 <span class="section-heading-Upper">Want to be a part of the climate progress?</span>
               </h2>
+              <form name="sentMessage" id="contactForm" novalidate>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="text" id="name" class="form-control" placeholder="Organization Name" required="required">
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <textarea name="message" id="message" class="form-control" rows="4" placeholder="Initiative" required></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </form>
               <div class="intro-button mx-auto">
-                <a class="btn btn-primary btn-xl" href="join.html">Join now!</a >
+                <a class="btn btn-primary btn-xl" href="index.html">Submit!</a >
               </div>
             </div>
           </div>
@@ -70,68 +90,7 @@
     </div>
   </section>
 
-  <section class="page-section about-heading">
-    <div class="container">
-      <div class="about-heading-content">
-        <div class="row">
-          <div class="col-xl-9 col-lg-10 mx-auto">
-            <div class="bg-faded rounded p-5">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Rank 1</span>
-                <span class="section-heading-lower">Yale-NUS College</span>
-              </h2>
-              <p>To reduce college electricity usage by 10% over the next year</p>
-              <div class="intro-button mx-auto">
-                <a class="btn btn-primary btn-xl" href="https://www.commit-me.com/pledge/pid1">Fund / Track Progress</a >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <section class="page-section about-heading">
-    <div class="container">
-      <div class="about-heading-content">
-        <div class="row">
-          <div class="col-xl-9 col-lg-10 mx-auto">
-            <div class="bg-faded rounded p-5">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Rank 2</span>
-                <span class="section-heading-lower">NUS</span>
-              </h2>
-              <p>To reduce carbon emission by 7% by 2020.</p>
-              <div class="intro-button mx-auto">
-                <a class="btn btn-primary btn-xl" href="https://www.commit-me.com/pledge/pid1">Fund / Track Progress</a >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="page-section about-heading">
-    <div class="container">
-      <div class="about-heading-content">
-        <div class="row">
-          <div class="col-xl-9 col-lg-10 mx-auto">
-            <div class="bg-faded rounded p-5">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Rank 3</span>
-                <span class="section-heading-lower">NTU</span>
-              </h2>
-              <p>To reduce carbon emission by 5% by 2020.</p>
-              <div class="intro-button mx-auto">
-                <a class="btn btn-primary btn-xl" href="https://www.commit-me.com/pledge/pid1">Fund / Track Progress</a >
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
