--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <h1 class="site-heading text-center text-black d-none d-lg-block">
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Hack4Climate</span>
     <span class="site-heading-lower">Climate Action Tracking</span>
   </h1>
